# BobaWay

./: .gitignore  .replit  README.md  WORDS.md  bobaway_utils.py  browser.py  clean_csvs.py  constants.py  db.py  exceptions.csv  forms.py  main.py  pinyin-0.4.0-py3-none-any.whl  pyproject.toml  requirements.txt  sinodb.py  sinotype_utils.py  src_3.csv  src_4.csv  taiping_utils.py  typewanese_util.py  user.py
BobaWay/: exceptions.csv  index.html  main.py  output.html  src_2.csv  src_3.csv  src_4.csv
BobaWay About/: index.html  romanization.html
BobaWay About/static/: bobaway.css  index.js
BobaWay/static/: bobaway.css  index.js
BobaWay/templates/: index.html  output.html
static/: about_bobaway.css  bobaway.css  data.js  flipped.txt  index.js  output.json  romanization.py  romanization.txt  server.js  src_1.csv  src_2.csv  tai-ping.js  typewanese.js
static/scripts/: about.js  admin-portal.js  admin-words.js  data.js  nav.js  sino-type.js  tai-ping.js  typewanese.js
static/styles/: about_bobaway.css  admin.css  admin_portal.css  admin_words.css  bobaway.css  home.css  romanization.css  shared.css  sino-type.css  tai-ping.css  typewanese.css
templates/: about.html  admin_signup.html  admin_words.html  adminlogin.html  adminportal.html  base.html  home.html  index.html  output.html  romanization.html  sino-type.html  tai-ping.html  typewanese.html  validation.html
