[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
replit = "^3.2.4"
Flask = {extras = ["async"], version = "^3.1.1"}
pinyin = "^0.4.0"
deep-translator = "^1.11.0"
pygame = "^2.4.0"
pydub = "^0.25.1"
prettier = "0.0.7"
pyppeteer = "^1.0.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.12.3"
psycopg2-binary = "^2.9.10"
wtforms = "^3.2.1"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
yapf = "^0.43.0"
numpy = "^2.3.1"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"